=======
CHANGES
=======

4.0.1 (unreleased)
------------------

- Nothing changed yet.


4.0.0 (2012-12-13)
------------------

- Replaced deprecated ``zope.interface.classProvides`` usage with equivalent
  ``zope.interface.provider`` decorator.

- Replaced deprecated ``zope.interface.implements`` usage with equivalent
  ``zope.interface.implementer`` decorator.

- Dropped support for Python 2.4 and 2.5.

- PageTemplate.pt_render() has a new argument, check_macro_expansion,
  defaulting to True.

- PageTemplateTracebackSupplement passes check_macro_expansion=False, to
  avoid LP#732972.


3.6.3 (2011-09-21)
------------------

- Fixed test assertions to be compatible with zope.tal 3.6.

3.6.2 (2011-09-21)
------------------

- Change interface for engine and program such that the return type of
  the ``cook`` method is a tuple ``(program, macros)``. This follows
  the interface for the TAL parser's ``getCode`` method.

  This fixes a legacy compatibility issue where code would expect an
  ``_v_macros`` volatile attribute which was missing.

3.6.1 (2011-08-23)
------------------

- Fixed issue with missing default value for ``strictinsert``.

3.6.0 (2011-08-20)
------------------

- Replaced StringIO stream class with a faster list-based implementation.

- Abstract out the template engine and program interfaces and allow
  implementation replacement via a utility registration.

- Removed ancient copyright from test files (LP: #607228)

3.5.2 (2010-07-08)
------------------

- Fixed PTRuntimeError exception messages to be consistent across Python
  versions, and compatibile with the output under Python 2.4.  (More
  readable than the previous output under Python 2.6 as well.)

3.5.1 (2010-04-30)
------------------

- Removed use of 'zope.testing.doctestunit' in favor of stdlib's doctest.

- Added dependency on "zope.security [untrustedpython]" because the 'engine'
  module uses it.

3.5.0 (2009-05-25)
------------------

- Added test coverage reporting support.
